完善管理平台与服务拆分边界
1. 新增 IAM、Admin、Audit 与 Monitor 独立管理应用，统一 OAuth2/OIDC、应用级权限、集中审计、Broker 诊断和 Element Plus 控制台，并收敛本地端口及 Nacos 动态配置与存活注册

2. 完善 Broker 管理接口、Gossip 状态同步、连接迁移和 Gateway 下行链路，修复 Gateway Bolt 端口冲突、用户路由大 ID 截断及连接时间字段映射缺失

3. 收敛 Account、Social、Message 数据所有权和跨服务契约，新增管理用户 Facade、批量用户投影与 FriendProfile 派生模型，恢复好友和聊天展示名称并简化纯列表返回协议

4. 重组 Identity、Dubbo、Datasource、Session、Web、Excel 与 Kafka 插件边界，拆分服务自有 DDL、统一异常与安全上下文传播，并补齐缓存、锁和序列化配置

5. 扩展架构测试、Java 与 SQL Harness、Management UI 门禁、设计文档和执行计划，使新增边界、交互规范及运行约束进入全量验证流程